feat/added get-user-route
