# src/requestHandlers/get.user.handler.js
@@ -1,0 +1,8 @@
+import { getUser } from '../services/user.service.js';
+
+export default async (request, reply) => {
+    const fastifyInstance = request.server;
+    const response = await getUser(fastifyInstance, request);
+
+    reply.status(response.statusCode).send(response.body);
+};
